corrected color name whitespace in color.less

--- a/styles/pre/less/components/color.less
+++ b/styles/pre/less/components/color.less
@@ -49,7 +49,7 @@
 @lilac: #c8a2c8; rgba(200,162,200,1.0);
 @lime: #bfff00; rgba(191,255,0,1.0);
 @magenta: #ff00ff; rgba(255,0,255,1.0);
-@magenta rose: #ff00af; rgba(255,0,175,1.0);
+@magenta-rose: #ff00af; rgba(255,0,175,1.0);
 @maroon: #800000; rgba(128,0,0,1.0);
 @mauve: #e0b0ff; rgba(224,176,255,1.0);
 @navy-blue: #000080; rgba(0,0,128,1.0);
